--- a/.gitignore
+++ b/.gitignore
@@ -1,323 +1,12 @@
-"use client";
-
-import React, {
-  Fragment,
-  JSXElementConstructor,
-  Key,
-  ReactElement,
-  ReactNode,
-} from "react";
 import { ChevronLeft, ChevronRight } from "lucide-react";
-import CardsRow from "./CardsRow/cardsRow";
-import DataDisplay from "./DataDisplay/dataDisplay";
-import Status from "./Status/status";
-import TableStep from "./TableStep/tableStep";
-import Timeline from "./Timeline/timeline";
-import { formatDateTime } from "@/app/utils/formatDateTime";
-import TimelineScrollWrapper from "./timelineScrollWrapper";
-
-export type workflowStatus =
-  | "completed"
-  | "canceled"
-  | "waiting"
-  | "pending"
-  | "skipped";
-
-export type IHistory = {
-  status: string;
-  data: any[][];
-  timeLine?: { name: string; status: workflowStatus }[];
-  cardRowData?: any[] | [];
-  dataDisplayData?: any[];
-  selectedBank?: string;
-};
-
-export default function History({
-  data,
-  timeLine,
-  cardRowData,
-  dataDisplayData,
-  selectedBank,
-}: IHistory) {
-  const timeLineMap = timeLine ?? [];
-
-  const statusFieldMap: Record<string, string> = {
-    cancel: "rejected",
-    canceled: "-",
-    completed: "approved",
-    pending: "-",
-    reject: "rejected",
-    return: "partial",
-    success: "approved",
-    waiting: "-",
-  };
-  const statusLabelMap: Record<string, string> = {
-    cancel: "Canceled",
-    canceled: "-",
-    completed: "Completed",
-    pending: "-",
-    return: "Requested change",
-    waiting: "-",
-  };
-
-  interface IPeople {
-    userId: Key | null | undefined;
-    firstName:
-      | string
-      | number
-      | bigint
-      | boolean
-      | ReactElement<any, string | JSXElementConstructor<any>>
-      | Iterable<ReactNode>
-      | null
-      | undefined;
-    lastName:
-      | string
-      | number
-      | bigint
-      | boolean
-      | ReactElement<any, string | JSXElementConstructor<any>>
-      | Iterable<ReactNode>
-      | null
-      | undefined;
-    addedAt?: string;
-    addedBy?: string;
-    approvalsLevel?: string;
-    permissionLevel?: string;
-    indexLevel?: number;
-    action?: {
-      signature: string;
-      subtype: ReactNode;
-      type: string;
-      date: string;
-      comment: any;
-    }[];
-    signature?: string;
-    date?: string;
-    type?: string;
-    comment?: any;
-  }
-
-  return (
-    <div className="p-6">
-      {cardRowData && (
-        <div className="flex flex-col gap-4 mb-6">
-          <CardsRow title="Approvals" data={cardRowData} />
-        </div>
-      )}
-
-<div className="flex flex-col gap-4">
-  <div className="text-[#484A55] font-figtree text-base font-semibold leading-[24px] tracking-[0.12px] text-left">
-    Timeline
-  </div>
-
-  {/* SCROLL WRAPPER */}
-  <div className=" max-w-full">
-    <div className="min-w-fit flex gap-6 pr-6">
-    <TimelineScrollWrapper>
-    
-        {data
-          .flatMap((subArray, subArrayIndex) =>
-            subArray.map((item, itemIndex) => ({
-              ...item,
-              isFromMultiple: subArray.length > 1,
-              subArrayIndex,
-              key: `${subArrayIndex}-${itemIndex}`,
-              originalStatus: item.status as workflowStatus,
-            }))
-          )
-          .map((item: any, idx, flat) => {
-            const isLast = idx === flat.length - 1;
-            const next = flat[idx + 1];
-            const statusValue = timeLine
-              ? timeLineMap[idx].status
-              : item.originalStatus;
-            const hasExtra =
-              !isLast &&
-              item.isFromMultiple &&
-              next?.isFromMultiple &&
-              item.subArrayIndex === next.subArrayIndex;
-
-            return (
-              <Fragment key={item.key}>
-                <Timeline.Step progress={!isLast} status={statusValue}>
-                  <div className="relative flex flex-col items-center justify-center  overflow-visible min-h-[180px]">
-                    {hasExtra && (
-                      <span className="absolute top-[-3px] left-1/2 transform -translate-x-1/2">
-                        <Timeline.Link
-                          status={next?.originalStatus}
-                          hoverContent={
-                            <div className="text-xs">
-                              <div>
-                                <strong>Name:</strong> {item.name}
-                              </div>
-                              <div>
-                                <strong>Status:</strong> {item.originalStatus}
-                              </div>
-                              <div>
-                                <strong>Group:</strong> {item.subArrayIndex}
-                              </div>
-                            </div>
-                          }
-                        />
-                      </span>
-                    )}
-                    <Timeline.Circle status={statusValue} />
-                    <Timeline.Text>{item.name}</Timeline.Text>
-                  </div>
-                </Timeline.Step>
-              </Fragment>
-            );
-          })}
-      </TimelineScrollWrapper>
-    </div>
-  </div>
-</div>
-
-      <div className="mt-10">
-        <TableStep.Root>
-          {data.map((group, groupIdx) =>
-            group.map((item: any, itemIdx: number) => {
-              const statusValue = timeLine
-                ? timeLineMap[groupIdx].status
-                : (item.status as workflowStatus);
-
-              return (
-                <Fragment key={`${item.status}-${groupIdx}-${itemIdx}`}>
-                  <TableStep.Title status={statusValue}>
-                    {item.approvalsLevel ? (
-                      <div className="flex gap-1">
-                        <div className="font-normal">
-                          {groupIdx + 1}.{item.indexLevel}. {item.name}:
-                        </div>
-                        <div className="font-semibold">
-                          {item.approvalsLevel}
-                        </div>
-                        <br />
-                      </div>
-                    ) : (
-                      `${groupIdx + 1}. ${item.name}`
-                    )}
-                    <div className="text-[#636574]">
-                      {item.permissionLevel ? ` • ${item.permissionLevel}` : ""}
-                    </div>
-                  </TableStep.Title>
-
-                  <TableStep.Columns>
-                    <TableStep.Line>Participant</TableStep.Line>
-                    <TableStep.Line>Signature</TableStep.Line>
-                    <TableStep.Line>Completed</TableStep.Line>
-                    <TableStep.Line>Status</TableStep.Line>
-                    <TableStep.Line>Result</TableStep.Line>
-                    <TableStep.Line>Comments</TableStep.Line>
-                  </TableStep.Columns>
-
-                  {item.permissions?.people?.map(
-                    (people: IPeople, idx: number, arr: IPeople[]) => {
-                      const isPendingOrCompleted =
-                        item.status === "completed" ||
-                        item.status === "pending";
-
-                      return (
-                        <Fragment key={`${people.userId}-${idx}`}>
-                          <TableStep.Body>
-                            <TableStep.Item>
-                              <div className="flex items-center text-[#636574]">
-                                {people.firstName} {people.lastName}
-                                {people.addedAt && people.addedBy && (
-                                  <div className="text-sm leading-[21px] font-normal text-[#636574]">
-                                    {" "}
-                                    - Added by {people.addedBy}
-                                  </div>
-                                )}
-                              </div>
-                            </TableStep.Item>
-
-                            <TableStep.Item>
-                              {people.action ? people.action[0].signature : "-"}
-                            </TableStep.Item>
-
-                            <TableStep.Item>
-                              {people.action
-                                ? formatDateTime(people.action[0].date)
-                                : "-"}
-                            </TableStep.Item>
-
-                            <TableStep.Item>
-                              {isPendingOrCompleted ? (
-                                item.status === "pending" ? (
-                                  "Active"
-                                ) : (
-                                  <Status
-                                    width={164}
-                                    type={statusFieldMap[item.status] as any}
-                                  >
-                                    {statusLabelMap[item.status] as string}
-                                  </Status>
-                                )
-                              ) : (
-                                "-"
-                              )}
-                            </TableStep.Item>
-
-                            <TableStep.Item>
-                              {people.action ? (
-                                <Status
-                                  width={164}
-                                  type={
-                                    statusFieldMap[people.action[0].type] as any
-                                  }
-                                >
-                                  {people.action[0].type === "success"
-                                    ? item.successLabel
-                                    : people.action[0].subtype}
-                                </Status>
-                              ) : (
-                                "-"
-                              )}
-                            </TableStep.Item>
-
-                            <TableStep.Item>
-                              {people.action && people.action[0].comment
-                                ? people.action[0].comment
-                                : "-"}
-                            </TableStep.Item>
-                          </TableStep.Body>
-
-                          {idx !== arr.length - 1 && (
-                            <div className="border-b border-[#EBEBEB] mx-10" />
-                          )}
-                        </Fragment>
-                      );
-                    }
-                  )}
-                </Fragment>
-              );
-            })
-          )}
-        </TableStep.Root>
-      </div>
-
-      {dataDisplayData && dataDisplayData.length > 0 && (
-        <div className="mt-6">
-          <DataDisplay
-            title={`Process Integration: ${selectedBank}`}
-            data={dataDisplayData}
-          />
-        </div>
-      )}
-    </div>
-  );
-}
-
-
-
-
-import { ChevronLeft, ChevronRight } from "lucide-react"; // ou qualquer ícone que preferir
 import { useRef } from "react";
-import * as styles from "./styles"
+import * as styles from "./styles";
 
-export default function TimelineScrollWrapper({ children }: { children: React.ReactNode }) {
+export default function TimelineScrollWrapper({
+  children,
+}: {
+  children: React.ReactNode;
+}) {
   const scrollRef = useRef<HTMLDivElement>(null);
 
   const scrollLeft = () => {
@@ -330,26 +19,28 @@ export default function TimelineScrollWrapper({ children }: { children: React.Re
 
   return (
     <div className={styles.timelineWrapper}>
-      {/* Setas */}
+      {/* Botões de navegação */}
       <button
         onClick={scrollLeft}
-        className="absolute left-0 top-1/2 -translate-y-1/2 z-10 bg-white shadow-md rounded-full p-1"
+        className="absolute left-2 top-1/2 -translate-y-1/2 z-10 bg-white shadow rounded-full p-1"
       >
         <ChevronLeft size={20} />
       </button>
       <button
         onClick={scrollRight}
-        className="absolute right-0 top-1/2 -translate-y-1/2 z-10 bg-white shadow-md rounded-full p-1"
+        className="absolute right-2 top-1/2 -translate-y-1/2 z-10 bg-white shadow rounded-full p-1"
       >
         <ChevronRight size={20} />
       </button>
 
-      {/* Scroll horizontal */}
+      {/* Scroll horizontal interno */}
       <div
         ref={scrollRef}
-        className="overflow-x-auto no-scrollbar scroll-smooth"
+        className="overflow-x-auto scroll-smooth no-scrollbar w-full"
       >
-        <div className="flex gap-6 min-w-fit px-8">{children}</div>
+        <div className="flex gap-6 min-w-fit px-8 py-2 items-stretch">
+          {children}
+        </div>
       </div>
     </div>
   );
