--- a/.gitignore
+++ b/.gitignore
@@ -1,195 +1,140 @@
-import React, { ReactNode, useRef } from "react";
-import FlagIcon from "@/app/assets/svg/flag.svg";
-import CheckIcon from "@/app/assets/svg/check.svg";
-import FlagGreenIcon from "@/app/assets/svg/flag-green.svg";
-import CloseGrayIcon from "@/app/assets/svg/close-gray.svg";
-import CloseWhiteIcon from "@/app/assets/svg/close-white.svg";
-import ChevronLeftLargeIcon from "@/app/assets/svg/chevron-left-large.svg";
-import ChevronRightLargeIcon from "@/app/assets/svg/chevron-right-large.svg";
-import WrapperIcon from "@/app/assets/svg/Wrapper.svg"; // novo ícone quadrado
-import { StaticImageData } from "next/image";
-import Image from "next/image";
+export function parseHistoryToData(history: RawHistory): HistoryData {
+  if (!history || !Array.isArray(history.data)) {
+    return {
+      status: history?.status ?? "",
+      data: [],
+      cardRowData: [],
+      dataDisplayData: [],
+      selectedBank: "",
+      approvalsSteps: [],
+    };
+  }
 
-type StatusType = "waiting" | "pending" | "completed" | "canceled" | "skipped";
+  // Filtra os steps agrupados (Approvals and Restrictions)
+  const approvalsSteps = (history.data.flat()).filter(
+    (s) => s.name && s.name.startsWith("Approvals and Restrictions")
+  );
 
-interface TimelineProps {
-  children?: ReactNode;
+  // Filtra todos os outros steps (não approvals)
+  const normalSteps = (history.data.flat()).filter(
+    (s) => !(s.name && s.name.startsWith("Approvals and Restrictions"))
+  );
+
+  // Monta os steps da timeline principal:
+  const timelineSteps = [];
+
+  // 1. Initiator
+  const initiatorStep = normalSteps.find((s) =>
+    s.name?.toLowerCase().includes("initiator")
+  );
+  if (initiatorStep) timelineSteps.push(initiatorStep);
+
+  // 2. Validation
+  const validationStep = normalSteps.find((s) =>
+    s.name?.toLowerCase().includes("validation")
+  );
+  if (validationStep) timelineSteps.push({
+    ...validationStep,
+    name: "Validations",
+  });
+
+  // 3. Approvals (Agrupado)
+  if (approvalsSteps.length > 0) {
+    // status geral: se algum pending -> pending, senão waiting, senão completed...
+    const groupStatus =
+      approvalsSteps.find((s) => s.status === "pending")?.status ||
+      approvalsSteps[0].status ||
+      "pending";
+    timelineSteps.push({
+      id: 999, // qualquer id fixo
+      name: "Approvals and Restrictions",
+      status: groupStatus,
+      // outros campos que quiser exibir
+    });
+  }
+
+  // 4. Restriction Removal
+  const restrictionRemovalStep = normalSteps.find((s) =>
+    s.name?.toLowerCase().includes("restriction removal")
+  );
+  if (restrictionRemovalStep) timelineSteps.push(restrictionRemovalStep);
+
+  // 5. Wire Repair
+  const wireRepairStep = normalSteps.find((s) =>
+    s.name?.toLowerCase().includes("wire repair")
+  );
+  if (wireRepairStep) timelineSteps.push(wireRepairStep);
+
+  // 6. OFAC
+  const ofacStep = normalSteps.find((s) =>
+    s.name?.toLowerCase().includes("ofac")
+  );
+  if (ofacStep) timelineSteps.push(ofacStep);
+
+  // ...adicione outros steps como precisar
+
+  // Finaliza
+  return {
+    status: history.status,
+    data: timelineSteps.map((step) => [step]), // cada step dentro de um array
+    cardRowData: history.cardRowData,
+    dataDisplayData: history.dataDisplayData,
+    selectedBank: history.selectedBank,
+    approvalsSteps, // Passa o grupo pro modal
+  };
 }
 
-interface StepProps {
-  status?: StatusType;
-  progress?: boolean;
-  children?: ReactNode;
+
+
+
+{
+  data
+    .flatMap((subArray, subArrayIndex) =>
+      subArray.map((item, itemIndex) => ({
+        ...item,
+        isFromMultiple: subArray.length > 1,
+        subArrayIndex,
+        key: `${subArrayIndex}-${itemIndex}`,
+        originalStatus: item.status as workflowStatus,
+      }))
+    )
+    .map((item: any, idx, flat) => {
+      // ...
+      const isApprovalsStep = item.name === "Approvals and Restrictions";
+      return (
+        <Fragment key={item.key}>
+          <Timeline.Step progress={!isLast} status={statusValue}>
+            <div className="relative flex flex-col items-center justify-center  overflow-visible min-h-[180px]">
+              {isApprovalsStep ? (
+                <>
+                  <span
+                    style={{ cursor: "pointer" }}
+                    onClick={() => setShowApprovalsModal(true)}
+                    title="Ver detalhes dos Approvals"
+                  >
+                    <Timeline.Circle status={statusValue} />
+                    <Timeline.Text>
+                      {item.name}
+                      <span className="ml-1 text-xs text-blue-600 underline">
+                        (detalhes)
+                      </span>
+                    </Timeline.Text>
+                  </span>
+                  <TimelineApprovalsModal
+                    open={showApprovalsModal}
+                    onClose={() => setShowApprovalsModal(false)}
+                    data={approvalsSteps}
+                  />
+                </>
+              ) : (
+                <>
+                  <Timeline.Circle status={statusValue} />
+                  <Timeline.Text>{item.name}</Timeline.Text>
+                </>
+              )}
+            </div>
+          </Timeline.Step>
+        </Fragment>
+      );
+    });
 }
-
-//
-// Root & Scroll
-//
-export const TimelineRoot: React.FC<TimelineProps> = ({ children }) => (
-  <div className="flex">{children}</div>
-);
-
-export const TimelineScroll: React.FC<TimelineProps> = ({ children }) => {
-  const scrollRef = useRef<HTMLDivElement>(null);
-  const scroll = (delta: number) => {
-    if (scrollRef.current) scrollRef.current.scrollLeft += delta;
-  };
-  return (
-    <div className="flex items-center">
-      <button
-        onClick={() => scroll(-100)}
-        className="w-[37px] h-[56px] flex items-center justify-center rounded border border-[#DBDBDB] bg-white"
-      >
-        <ChevronLeftLargeIcon />
-      </button>
-      <div
-        ref={scrollRef}
-        className="flex gap-[10px] w-full overflow-x-auto whitespace-nowrap transition-all duration-300 scrollbar-none"
-      >
-        {children}
-      </div>
-      <button
-        onClick={() => scroll(100)}
-        className="w-[37px] h-[56px] flex items-center justify-center rounded border border-[#DBDBDB] bg-white"
-      >
-        <ChevronRightLargeIcon />
-      </button>
-    </div>
-  );
-};
-
-//
-// Circle
-//
-export const TimelineCircle: React.FC<Pick<StepProps, "status">> = ({
-  status = "waiting",
-}) => {
-  const IconMap: Record<StatusType, StaticImageData> = {
-    waiting: FlagIcon,
-    pending: FlagGreenIcon,
-    completed: CheckIcon,
-    canceled: CloseWhiteIcon,
-    skipped: CloseGrayIcon,
-  };
-  const BorderColorMap: Record<StatusType, string> = {
-    waiting: "#DBDBDB",
-    pending: "#008056",
-    completed: "#008056",
-    canceled: "#CA303D",
-    skipped: "#DBDBDB",
-  };
-  const BgColorMap: Record<StatusType, string> = {
-    waiting: "#FFFFFF",
-    pending: "#FFFFFF",
-    completed: "#008056",
-    canceled: "#CA303D",
-    skipped: "#F7F7F8",
-  };
-  const Icon = IconMap[status];
-  return (
-    <div
-      className="w-[56px] h-[56px] flex items-center justify-center rounded-full"
-      style={{
-        border: `1px solid ${BorderColorMap[status]}`,
-        backgroundColor: BgColorMap[status],
-      }}
-    >
-      <Image src={Icon} alt="icon" />
-    </div>
-  );
-};
-
-//
-// Link (quadrado com hoverContent)
-//
-export interface TimelineLinkProps {
-  status?: StatusType;
-  hoverContent?: ReactNode;
-}
-
-export const TimelineLink: React.FC<TimelineLinkProps> = ({
-  status = "waiting",
-  hoverContent,
-}) => {
-  const BorderColorMap: Record<StatusType, string> = {
-    waiting: "#DBDBDB",
-    pending: "#008056",
-    completed: "#008056",
-    canceled: "#CA303D",
-    skipped: "#DBDBDB",
-  };
-
-  return (
-    <div className="relative inline-block group mt-[7px]">
-      <div className="w-[28px] h-[28px] flex items-center rounded-[5px] justify-center bg-white">
-        <Image src={WrapperIcon} alt="IconWrapper" />
-      </div>
-      {hoverContent && (
-        <div
-          className="
-            absolute top-full left-1/2 -translate-x-1/2
-            mt-2 w-48 p-2 bg-white rounded shadow-lg
-            opacity-0 group-hover:opacity-100 transition-opacity
-          "
-        >
-          {hoverContent}
-        </div>
-      )}
-    </div>
-  );
-};
-
-//
-// Step & Text
-//
-export const TimelineStep: React.FC<StepProps> = ({
-  status = "waiting",
-  progress = false,
-  children,
-}) => {
-  const BorderColorMap: Record<StatusType, string> = {
-    waiting: "#DBDBDB",
-    pending: "#008056",
-    completed: "#008056",
-    canceled: "#CA303D",
-    skipped: "#DBDBDB",
-  };
-  const borderColor = BorderColorMap[status];
-
-  return (
-    <div
-      className="relative flex-1 flex flex-col items-center"
-      style={{ width: 150 }}
-    >
-      {progress && (
-        <div
-          className="absolute z-0 border-b left-[calc(57%+25px)] top-[43%] -translate-y-1/2 w-[calc(100%+10px-56px)]"
-          style={{ borderColor }}
-        />
-      )}
-      <div className="relative z-10 flex flex-col items-center gap-2">
-        {children}
-      </div>
-    </div>
-  );
-};
-
-export const TimelineText: React.FC<TimelineProps> = ({ children }) => (
-  <span className="text-[12px] font-normal leading-[18px] text-[#484A55] text-center font-figtree tracking-[0.12px]">
-    {children}
-  </span>
-);
-
-const Timeline = {
-  Scroll: TimelineScroll,
-  Root: TimelineRoot,
-  Step: TimelineStep,
-  Circle: TimelineCircle,
-  Link: TimelineLink,
-  Text: TimelineText,
-};
-export default Timeline;
-
-
-
-
